change name address for hotelAddress everywhere
